EXTRA_DIST = \
	patch-viewos-2.6.14.diff \
	patch-linux-2.6.15-ptmulti \
	patch-linux-2.6.15-ptmulti-ptvm \
	patch-linux-2.6.16-ptmulti \
	patch-linux-2.6.16-ptmulti-ptvm \
	patch-linux-2.6.17-ptmulti \
	patch-linux-2.6.17-ptmulti-ptvm \
	patch-linux-2.6.18-ptmulti \
	patch-linux-2.6.18-ptmulti-ptvm \
	patch-linux-2.6.19-ptmulti \
	patch-linux-2.6.19-ptmulti-ptvm

extraclean: maintainer-clean
	rm -rf aclocal.m4 autom4te.cache autoscan.log configure.scan \
	config.h.in* configure depcomp install-sh Makefile.in \
	config.guess config.sub \
	ltmain.sh missing Makefile.in \
	kernel-patch-viewos-*.tar.gz kernel-patch-viewos-*.tar.bz2

