EXTRA_DIST = \
	patch-linux-2.6.15-ptmulti \
	patch-linux-2.6.15-ptmulti-ptvm \
	patch-linux-2.6.16-ptmulti \
	patch-linux-2.6.16-ptmulti-ptvm \
	patch-linux-2.6.17-ptmulti \
	patch-linux-2.6.17-ptmulti-ptvm \
	patch-linux-2.6.18-ptmulti \
	patch-linux-2.6.18-ptmulti-ptvm \
	patch-linux-2.6.19-ptmulti \
	patch-linux-2.6.19-ptmulti-ptvm \
	patch-linux-2.6.20-ptmulti \
	patch-linux-2.6.20-ptmulti-ptvm \
	patch-linux-2.6.21-ptmulti \
	patch-linux-2.6.21-ptmulti-ptvm \
	patch-linux-2.6.22-ptmulti \
	patch-linux-2.6.22-ptmulti-ptvm \
	patch-linux-2.6.23-ptmulti \
	patch-linux-2.6.23-ptmulti-ptvm \
	patch-linux-2.6.24-ptmulti \
	patch-linux-2.6.24-ptmulti-ptvm \
	patch-linux-2.6.25.6-ptrace_multi \
	patch-linux-2.6.25.6-ptrace_vm \
	patch-linux-2.6.26-rc6-ptrace_multi \
	patch-linux-2.6.26-rc6-ptrace_vm \
	patch-linux-2.6.28.2-ptrace_multi \
	patch-linux-2.6.28.2-ptrace_vm \
	patch-linux-2.6.29-ptrace1_vm1 \
	patch-linux-2.6.29-ptrace2-vm2 \
	patch-linux-2.6.29-ptrace3_vmulti \
	patch-linux-2.6.30.5-ptrace1-vm1 \
	patch-linux-2.6.30.5-ptrace2-vm2 \
	patch-linux-2.6.30.5-ptrace3-vmulti \
	patch-linux-2.6.31-rc8-ptrace1-vm1 \
	patch-linux-2.6.31-rc8-ptrace2-vm2 \
	patch-linux-2.6.31-rc8-ptrace3-vmulti \
	patch-linux-2.6.32.2-ptrace1-vm1 \
	patch-linux-2.6.32.2-ptrace2-vm2 \
	patch-linux-2.6.32.2-ptrace3-vmulti \
	patch-linux-2.6.33-rc2-ptrace1-vm1 \
	patch-linux-2.6.33-rc2-ptrace2-vm2 \
	patch-linux-2.6.33-rc2-ptrace3-vmulti \
	patch-linux-2.6.34-ptrace1-vm1 \
	patch-linux-2.6.34-ptrace2-vm2 \
	patch-linux-2.6.34-ptrace3-vmulti \
	patch-linux-2.6.34-utrace-ptrace1-vm1 \
	patch-linux-2.6.34-utrace-ptrace2-vm2 \
	patch-linux-2.6.34-utrace-ptrace3-vmulti \
	patch-linux-2.6.35.10-utrace-ptrace1-vm1 \
	patch-linux-2.6.35.10-utrace-ptrace2-vm2 \
	patch-linux-2.6.35.10-utrace-ptrace3-vmulti \
	patch-linux-2.6.35-ptrace1-vm1 \
	patch-linux-2.6.35-ptrace2-vm2 \
	patch-linux-2.6.35-ptrace3-vmulti \
	patch-linux-2.6.35-utrace-ptrace1-vm1 \
	patch-linux-2.6.35-utrace-ptrace2-vm2 \
	patch-linux-2.6.35-utrace-ptrace3-vmulti \
	patch-linux-2.6.36.2-ptrace1-vm1 \
	patch-linux-2.6.36.2-ptrace2-vm2 \
	patch-linux-2.6.36.2-ptrace3-vmulti \
	patch-linux-2.6.37-ptrace1-vm1 \
	patch-linux-2.6.37-ptrace2-vm2 \
	patch-linux-2.6.37-ptrace3-vmulti \
	patch-linux-2.6.37-utrace-ptrace1-vm1 \
	patch-linux-2.6.37-utrace-ptrace2-vm2 \
	patch-linux-2.6.37-utrace-ptrace3-vmulti \
	patch-linux-2.6.39.1-ptrace1-vm1 \
	patch-linux-2.6.39.1-ptrace2-vm2 \
	patch-linux-2.6.39.1-ptrace3-vmulti \
	patch-linux-3.0.1-ptrace1-vm1 \
	patch-linux-3.0.1-ptrace2-vm2 \
	patch-linux-3.0.1-ptrace3-vmulti \
	patch-linux-3.1.5-ptrace1-vm1 \
	patch-linux-3.1.5-ptrace2-vm2 \
	patch-linux-3.1.5-ptrace3-vmmulti \
	patch-viewos-2.6.14.diff

extraclean: maintainer-clean
	rm -rf aclocal.m4 autom4te.cache autoscan.log configure.scan \
	config.h.in* configure depcomp install-sh Makefile.in \
	config.guess config.sub \
	ltmain.sh missing Makefile.in \
	kernel-patch-viewos-*.tar.gz kernel-patch-viewos-*.tar.bz2

